Added (untested) kafka connection

--- a/example.env
+++ b/example.env
@@ -2,3 +2,12 @@
 
 TELEGRAM_APITOKEN=<insert token here>
 DECODER_PORT=9000
+KAFKA_1_PORT=19092
+KAFKA_2_PORT=29092
+KAFKA_3_PORT=39092
+ZOOKEEPER_1_PORT=12181
+ZOOKEEPER_2_PORT=22181
+ZOOKEEPER_3_PORT=32181
+KAFKA_URL=localhost
+# optional -> SKIP_FILTERS=true
+MY_IP=localhost
